<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miguel2pac.sesion1.Sesion1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/eNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/nombre"
                android:textColor="@color/red"
                android:textColorHint="@color/yellowgreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/apellido"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/eApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/apellido"
                android:textColor="@color/red"
                android:textColorHint="@color/yellowgreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mail"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textColorHint="@color/yellowgreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/eTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textColor="@color/red"
                android:textColorHint="@color/yellowgreen"
                android:textSize="20sp" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine" />

            <CheckBox
                android:id="@+id/cDormir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/domir" />

            <CheckBox
                android:id="@+id/cComer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comer" />

            <CheckBox
                android:id="@+id/cBailar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bailar" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ></Spinner>
<!--Terminar el espiner lol! -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightgray"
                android:onClick="Registrar"
                android:text="@string/registrar"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:textColor="@color/darkred"
            android:text="Información"
            android:textSize="25sp" /><!-- así se hacen los comentarios dumb-->
    </LinearLayout>

</ScrollView>